--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
 
     <form id="message-form">
         <input name="message" type="text" placeholder="Message"/>    
-        <button>Send</button>
+        <button id="submit-button">Send</button>
+        <button id="send-location">send location</button>
 
     </form>
 
