--- a/public/chat.html
+++ b/public/chat.html
@@ -6,7 +6,7 @@
     <title>Chat | Chat App </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/styles.css" />
-    <script src="main.js"></script>
+    
 </head>
 <body class="chat">
     
@@ -54,7 +54,7 @@
     <script src="/js/libs/jquery-3.1.0.min.js"></script>
     <script src="./js/libs/moment.js"></script>
     <script src="./js/libs/mustache.js"></script>
-
+    <script src="/js/libs/deparam.js"></script>
     <script src="/js/chat.js"></script>
 
 </body>
